<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.9">
  <GVL Name="GVL_iXlinker" Id="{75f395b1-0fce-499e-83d6-bb82be7c41cd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		E_Bus : E_Bus_F0495AE1; // ONLY FB_Topology.E_Bus_Raw shall use this variable! iXlinker only generates Globals at the time of creating this project.
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>